[package]
name = "neli"
edition = "2018"
version = "0.4.3"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "Type safe netlink library written in Rust"
license = "BSD-3-Clause"
repository = "https://github.com/jbaublitz/neli"
keywords = ["netlink"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE",
]

[lib]
name = "neli"
path = "src/lib.rs"

[dependencies]
byteorder = "1"
bytes = "*"
libc = "0.2.62"
smallvec = "*"

[dependencies.tokio]
version = "0.1"
optional = true

[dependencies.mio]
version = "0.6"
optional = true

[features]
default = []
async = ["tokio", "mio"]
